# ocaml-subc

./: dune-project
src/: ast.ml  dune  environment.ml  environment.mli  lex_main.ml  lexer.mll  logger.ml  main.ml  parser.mly  scope.cmi  scope.ml  scope.mli  scopes.ml  semantics.ml  semantics.mli  type_system.ml  type_system.mli
test/codegen/: func.c  hello.c  loop.c  printf.c
test/lexer/: dune  input.c  run_tests.ml  test.t
test/lexer/fixtures/: input.c.out
test/lexer/todo/: test.c  test2.c
test/parser/: arrays.c  basic_types.c  comprehensive.c  control_flow.c  dune  functions.c  invalid_features.c  nested_comments.c  pointers.c  roundtrip.t  structs.c  test.t
test/semantics/: complex_semantic_tests.c  complex_test_1.c  dune  expr.c  expr_test.c  func_op.c  ptr_op.c  semantic_tests1.c  slide.c  str_op.c  test.t
