(ocamllex lexer)
(menhir (modules parser))

(library
 (name subc)
 (wrapped false)
 (modules ast environment lexer logger parser type_system)
 (libraries base stdio sexplib)
 (flags (:standard -warn-error -37))
 (preprocess (pps ppx_jane)))

(executable
 (name main)
 (modules main)
 (libraries base stdio subc))

